--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Angular4Startup</title>
+  <title>Notice Board</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" type="text/css" id="theme" href="assets/lib/theme/css/theme-blue.css"/>
 </head>
 <body>
   <app-root></app-root>
+
+  <!-- START PLUGINS -->
+  <script type="text/javascript" src="assets/lib/theme/js/plugins/jquery/jquery.min.js"></script>
+  <script type="text/javascript" src="assets/lib/theme/js/plugins/jquery/jquery-ui.min.js"></script>
+  <script type="text/javascript" src="assets/lib/theme/js/plugins/bootstrap/bootstrap.min.js"></script>
+
+  <script src="assets/lib/datatables/js/jquery.dataTables.js"></script>
+  <script src="assets/lib/datatables/js/dataTables.jqueryui.js"></script>
+
+  <!-- THIS PAGE PLUGINS -->
+  <script type='text/javascript' src='assets/lib/theme/js/plugins/icheck/icheck.min.js'></script>
+  <script type="text/javascript" src="assets/lib/theme/js/plugins/mcustomscrollbar/jquery.mCustomScrollbar.min.js"></script>
+  <script type="text/javascript" src="assets/lib/theme/js/plugins/owl/owl.carousel.min.js"></script>
+  <!-- END PAGE PLUGINS -->
+
+  <script type="text/javascript" src="assets/lib/theme/js/plugins.js"></script>
+  <script type="text/javascript" src="assets/lib/theme/js/actions.js"></script>
 </body>
 </html>
